# cmdo

./: Cargo.toml  LICENSE  README.md  package.json  pre-install.js  start.js  uninstall.js
.github/workflows/: release.yml
src/: main.rs
