[package]
name = "cmdo-gen"
version = "0.1.0"
edition = "2021"
description = "A utility script allows to generate terminal commands."
repository = "https://github.com/parassharmaa/cmdo"
readme = "README.md"
keywords = ["rust"]
categories = ["command-line-utilities"]
license = "MIT"
homepage = "https://github.com/parassharmaa/cmdo"
authors = ["Paras Sharma <mail2paras.s@gmail.com>"]

[dependencies]
async-openai = "0.23.4"
clap = { version = "4.5.9", features = ["derive"] }
copypasta = "0.10.1"
tokio = { version= "1.38.1", features = ["full", "rt-multi-thread"] }
